Fix progress visibility

--- a/models/app/static/style.css
+++ b/models/app/static/style.css
@@ -12,7 +12,3 @@ footer {
 footer a {
     color: #777;
 }
-
-#progress {
-    width: 0%;
-}
